UDAPTE Hybrid install doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # Project information
-site_name: Gravitee.io Architecture Docs
+site_name: Gravitee.io Solution Engineer Documentation
 site_url: https://dobl1.github.io/gravitee-architecture-docs
-site_author: Martin Donath
+site_author: Dorian BLANC
 
 # Repository
 # repo_url: https://github.com/gravitee-io
