CHANGE repo name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: Gravitee.io Solution Engineer Documentation
-site_url: https://dobl1.github.io/gravitee-architecture-docs
+site_url: https://dobl1.github.io/gravitee-se-docs
 site_author: Dorian BLANC
 
 # Repository
